fix: layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
   display: flex;
 }
 
-.App .container {
-  display: flex;
+.container {
   flex-grow: 1;
   padding: 0 60px;
 }
